--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,20 @@
-/* @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed'); */
+/* fonts */
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css2?family=Lato');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code');
 
+/* variables */
 :root {
-    --background-color: #f4f4f4;
-    --background-color-alt: #333;
-	--text-color: #555;
-    --text-color-alt: #f4f4f4;
+    --background-color: #222;
+    --background-color-alt: #f0f0f0;
+    --background-color-code: #111;
+	--text-color: #f0f0f0;
+    --text-color-alt: #222;
+}
+
+/* default code */
+.code {
+    font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
 }
 
 * {
@@ -14,11 +24,10 @@
 }
 
 body {
-	/* font-family: 'Roboto Condensed', sans-serif; */
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    /* Use large font size for text-heavy webpages */
+	font-family: 'Roboto Condensed', sans-serif;
     font-size: 18px;
     line-height: 1.4em;
+    color: var(--text-color);
     background: var(--background-color);
     position: relative;
     min-height: 100vh;
@@ -29,6 +38,90 @@ main {
     margin: auto;
     width: 100vw;
     margin-bottom: 5rem;
+}
+
+#mobile-dropdown {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 10vh;
+    right: 0;
+    background: var(--background-color);
+    min-width: 40vw;
+    visibility: hidden;
+}
+
+#mobile-dropdown a {
+    display: block;
+    position: relative;
+    color: var(--text-color);
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    background-color: var(--background-color);
+    position: relative;
+    height: 10vh;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+nav #hidden-links {
+    display: none;
+}
+
+/* Style navigation menu links */
+nav a {
+    color: var(--text-color);
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    display: block;
+}
+
+/* Style the hamburger menu */
+nav a.icon {
+    background: var(--background-color);
+    display: block;
+    position: absolute;
+    right: 1vw;
+}
+
+/* Add a grey background color on mouse-over */
+nav a:hover {
+    background-color: var(--background-color);
+    color: var(--text-color);
+}
+
+img {
+    display: block;
+    max-width: 100vw;
+}
+
+h1 {
+    font-family: Lato, 'Roboto Condensed', sans-serif;
+    line-height: 1.4em;
+    padding-bottom: 1rem;
+}
+
+h2 {
+    font-family: Lato, 'Roboto Condensed', sans-serif;
+}
+
+h3 {
+    font-family: Lato, 'Roboto Condensed', sans-serif;
+}
+
+#landing {
+    padding-bottom: 0.5rem;
+}
+
+#landing-msg {
+    margin: 1rem;
 }
 
 section {
@@ -45,7 +138,6 @@ article {
 
 article img {
     max-width: 100%;
-    /* max-height: 410px; */
 }
 
 article h2 {
@@ -61,8 +153,8 @@ article p:last-child {
 }
 
 footer {
-    background: var(--background-color-alt);
-    color: var(--text-color-alt);
+    background: var(--background-color);
+    color: var(--text-color);
     text-align: center;
     position: absolute;
     width: 100%;
@@ -70,84 +162,12 @@ footer {
     padding: 1rem;
 }
 
-img {
-    display: block;
-    margin: 1rem auto;
-    max-width: 90%;
-    text-align: center;
-}
-
-/* Style the navigation menu */
-nav {
-    overflow: hidden;
-    background-color: var(--background-color-alt);
-    position: relative;
-}
-
-/* Hide the links inside the navigation menu (except for logo/home) */
-nav #hidden-links {
-    display: none;
-}
-
-/* Style navigation menu links */
-nav a {
-    color: var(--text-color-alt);
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 18px;
-    display: block;
-}
-
-/* Style the hamburger menu */
-nav a.icon {
-    background: var(--background-color-alt);
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
-/* Add a grey background color on mouse-over */
-nav a:hover {
-    background-color: var(--background-color);
-    color: var(--text-color);
-}
-
 .grid {
     display: grid;
     grid-auto-rows: auto;
 }
 
-.landing {
-    background-image: url('../images/venice.jpg');
-    background-position: center top;
-    background-size: cover;
-    position: relative;
-    max-width: 100%;
-    height: 100vh;
-}
-
-#landing-welcome {
-    position: absolute;
-    bottom: 5%;
-    left: 10%;
-    width: 80%;
-    color: var(--text-color-alt);
-}
-
-#photo-courtesy {
-    display: block;
-    position: absolute;
-    top: 4rem;
-    right: 1rem;
-}
-
-#photo-courtesy a {
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.featured-posts h2 {
+.featured h2 {
     text-align: center;
     margin: 1rem auto;
 }
@@ -155,9 +175,9 @@ nav a:hover {
 .post-container {
     display: block;
     text-align: center;
-    align-self: start;
-    justify-self: center;
-    align-content: center;
+    /* align-self: start; */
+    /* justify-self: center; */
+    /* align-content: center; */
     padding-bottom: 2rem;
 }
 
@@ -165,17 +185,19 @@ nav a:hover {
     padding-bottom: 0;
 }
 
-.post-container .date {
-    margin-top: 0.2rem;
-}
-
 .post-container h3 {
     padding-bottom: 0.5rem;
 }
 
-.post-container h3 a {
-    color: #333;
+.post-container h2 a {
+    color: var(--text-color);
     text-decoration: none;
+}
+
+.post-container img {
+    margin: 1rem auto;
+    max-width: 96%;
+    text-align: center;
 }
 
 .text-container {
@@ -209,7 +231,7 @@ nav a:hover {
         max-width: 45vw;
     }
 
-    .featured-posts .post-container:last-child {
+    .featured .post-container:last-child {
         grid-column: 1 / span 2;
     }
 }
@@ -248,11 +270,6 @@ nav a:hover {
         /* grid-gap: 1em; */
     }
 
-    #landing-welcome {
-        left: 30%;
-        width: 40%;
-    }
-
     .aboutme {
         width: 80vw;
         left: 10vw;
@@ -262,12 +279,20 @@ nav a:hover {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .featured-posts .post-container:last-child {
+    .featured .post-container:last-child {
         grid-column: 3;
     }
 }
 
 /* Desktops */
 @media screen and (min-width: 1200px) {
-    
+    #landing {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1em;
+    }
+
+    #landing-image {
+        width: 50vw;
+    }
 }
