--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
     --background-color-code: #111;
 	--text-color: #f0f0f0;
     --text-color-alt: #222;
+    --text-color-code: #D6D6D6
 }
 
 /* default code */
@@ -40,6 +41,15 @@ main {
     margin-bottom: 5rem;
 }
 
+.center-page {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    color: red;
+}
+
 #mobile-dropdown {
     display: flex;
     flex-direction: column;
@@ -47,7 +57,7 @@ main {
     top: 10vh;
     right: 0;
     background: var(--background-color);
-    min-width: 40vw;
+    width: 200px;
     visibility: hidden;
 }
 
@@ -122,6 +132,17 @@ h3 {
 
 #landing-msg {
     margin: 1rem;
+}
+
+.code-block {
+    background: var(--background-color-code);
+    padding: 1rem;
+    color: var(--text-color-code);
+    border-radius: 20px;
+}
+
+.code-block p {
+    padding-bottom: 0.2rem;
 }
 
 section {
@@ -253,16 +274,16 @@ footer {
         color: white;
         padding: 14px 16px;
         text-decoration: none;
-        font-size: 17px;
       }
       
-      nav a.icon {
+    nav a.icon {
         float: right;
     }
 
     nav #hidden-links {
         position: absolute;
-        right: 3rem;
+        right: 1rem;
+        display: block;
     }
 
     .grid {
@@ -287,10 +308,19 @@ footer {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 1em;
+        max-width: 100vw;
     }
 
-    #landing-image {
-        width: 50vw;
+    #landing img {
+        max-width: 60vw;
+    }
+
+    #landing-msg {
+        margin: auto 1rem;
+    }
+
+    #hamburger {
+        display: none;
     }
 }
 
