--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,7 @@ article h2 {
 }
 
 article p {
-    padding-bottom: 1rem;
+    padding-bottom: 0.5rem;
 }
 
 article p:last-child {
@@ -188,6 +188,21 @@ footer {
     z-index: 1;
 }
 
+.definitions {
+    display: flex;
+    flex-direction: rows;
+    padding-bottom: 1rem;
+}
+
+.definitions ul {
+    padding-top: 0;
+    margin-right: 2rem;
+}
+
+.definitions li {
+    list-style-type: none;
+}
+
 .code-section h3 {
     border-bottom: solid;
     padding-bottom: 0.5rem;
@@ -204,6 +219,7 @@ footer {
     margin-bottom: 1rem;
     padding: 1rem;
     font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
+    font-size: 16px;
     color: var(--text-color-code);
     border-radius: 20px;
 }
@@ -214,6 +230,13 @@ footer {
 
 .code-comment {
     font-style: italic;
+}
+
+.code-snippet {
+    background-color: var(--background-color-code);
+    font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
+    font-size: 17px;
+    padding: 0.3rem;
 }
 
 /* default code */
@@ -292,9 +315,9 @@ footer {
         word-wrap: break-word;
     }
 
-    .fixed {
+    /* .fixed {
         position: fixed;
-    }
+    } */
 
     .content {
         width: 70%;
