--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,8 @@ body {
     background: var(--background-color);
     position: relative;
     min-height: 100vh;
+    max-width: 100vw;
+    overflow-x: hidden;
     padding-bottom: 1rem;
 }
 
