--- a/css/styles.css
+++ b/css/styles.css
@@ -333,6 +333,10 @@ footer {
     background-color: var(--powershell);
 }
 
+section .code-block:last-child {
+    margin-bottom: 0;
+}
+
 /* Small tablets and sideways phones */
 @media screen and (min-width: 600px) {
     article {
