--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,7 @@ footer {
     background-color: var(--background-color-code);
     font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
     font-size: 17px;
-    padding: 0.3rem;
+    padding: 0.1rem 0.3rem;
     border-radius: 5px;
     color: var(--text-color-code)
 }
@@ -446,5 +446,5 @@ section .code-block:last-child {
 
 /* Desktops and large monitors */
 @media screen and (min-width: 1200px) {
-    
+
 }
