--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,6 @@ body {
 }
 
 main {
-    margin: auto;
     width: 100vw;
     margin-bottom: 5rem;
 }
@@ -47,11 +46,6 @@ nav {
     background-color: var(--background-color);
     position: relative;
     height: 10vh;
-}
-
-/* Hide the desktop menu on mobile device */
-nav #desktop-menu {
-    display: none;
 }
 
 /* Style navigation menu links */
@@ -74,6 +68,11 @@ nav a.hamburger {
     display: block;
     position: absolute;
     right: 1vw;
+}
+
+/* Hide the desktop menu on mobile device */
+nav #desktop-menu {
+    display: none;
 }
 
 #mobile-menu {
@@ -101,56 +100,11 @@ img {
     max-width: 100vw;
 }
 
-h1 {
-    font-family: Lato, 'Roboto Condensed', sans-serif;
-    line-height: 1.4em;
-    padding-bottom: 1rem;
-}
-
-h2 {
-    font-family: Lato, 'Roboto Condensed', sans-serif;
-}
-
-h3 {
-    font-family: Lato, 'Roboto Condensed', sans-serif;
-    padding-bottom: 0.5rem;
-    margin-bottom: 1rem;
-}
-
-h4 {
-    padding-bottom: 1rem;
-}
-
-#landing {
-    padding-bottom: 0.5rem;
-}
-
-#landing-msg {
-    margin: 1rem;
-}
-
 section {
     overflow: hidden;
     position: relative;
     padding-bottom: 2rem;
 }
-
-li {
-    padding-bottom: 0.2rem;
-    list-style-type: circle;
-    list-style-position: outside;
-}
-
-li:last-child {
-    padding-bottom: 0;
-}
-
-li a {
-    font-size: 19px;
-    color: var(--text-color);
-    text-decoration: none;
-}
-
 
 article {
     display: flex;
@@ -175,6 +129,42 @@ article p:last-child {
     padding-bottom: 0;
 }
 
+h1 {
+    font-family: Lato, 'Roboto Condensed', sans-serif;
+    line-height: 1.4em;
+    padding-bottom: 1rem;
+}
+
+h2 {
+    font-family: Lato, 'Roboto Condensed', sans-serif;
+}
+
+h3 {
+    font-family: Lato, 'Roboto Condensed', sans-serif;
+    padding-bottom: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+h4 {
+    padding-bottom: 1rem;
+}
+
+li {
+    padding-bottom: 0.2rem;
+    list-style-type: circle;
+    list-style-position: outside;
+}
+
+li:last-child {
+    padding-bottom: 0;
+}
+
+li a {
+    font-size: 19px;
+    color: var(--text-color);
+    text-decoration: none;
+}
+
 footer {
     background: var(--background-color);
     color: var(--text-color);
@@ -183,84 +173,6 @@ footer {
     width: 100%;
     bottom: 0;
     padding: 1rem;
-}
-
-.toc {
-    background-color: var(--background-color);
-    /* position: sticky; */
-    position: relative;
-    top: 0;
-    padding-bottom: 2rem;
-    z-index: 1;
-}
-
-.def {
-    display: flex;
-    flex-direction: rows;
-    padding-bottom: 1rem;
-}
-
-.def ul {
-    padding-top: 0;
-    margin-right: 2rem;
-}
-
-.def li {
-    list-style-type: none;
-}
-
-.code-section h3 {
-    border-bottom: solid;
-}
-
-.code-section h3 a {
-    text-decoration: none;
-    color: var(--text-color);
-}
-
-.code-section ul {
-    padding-bottom: 1rem;
-    padding-left: 1rem;
-}
-
-.code-block {
-    background: var(--background-color-code);
-    margin-bottom: 1rem;
-    padding: 1rem;
-    font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
-    font-size: 16px;
-    color: var(--text-color-code);
-    border-radius: 10px;
-}
-
-.code-block p {
-    padding-bottom: 0.2rem;
-}
-
-.code-comment {
-    font-style: italic;
-}
-
-.terminal-output {
-    color: #D6C13A;
-}
-
-.ps-cmdlet {
-    color: #D6D43A;
-}
-
-.code-snippet {
-    background-color: var(--background-color-code);
-    font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
-    font-size: 17px;
-    padding: 0.1rem 0.3rem;
-    border-radius: 5px;
-    color: var(--text-color-code)
-}
-
-/* default code */
-.code-text {
-    font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
 }
 
 .center-page {
@@ -280,13 +192,6 @@ footer {
 .grid {
     display: grid;
     grid-auto-rows: auto;
-}
-
-.definitions {
-    grid-template-columns: max-content auto;
-    column-gap: 1rem;
-    row-gap: 0.2rem;
-    padding-bottom: 1rem;
 }
 
 .gallery {
@@ -330,22 +235,143 @@ footer {
     text-align: left;
 }
 
-.powershell .code-block {
+.definitions {
+    grid-template-columns: max-content auto;
+    column-gap: 1rem;
+    row-gap: 0.2rem;
+    padding-bottom: 1rem;
+}
+
+.toc {
+    background-color: var(--background-color);
+    position: relative;
+    top: 0;
+    padding-bottom: 2rem;
+    z-index: 1;
+}
+
+.topic h3 {
+    border-bottom: solid;
+}
+
+.topic h3 a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.topic ul {
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+}
+
+.topic:last-child {
+    margin-bottom: 0;
+}
+
+.console {
+    margin-bottom: 1rem;
+    padding: 1rem;
+    font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
+    font-size: 16px;
+    color: var(--text-color-code);
+    border-radius: 10px;
+}
+
+.console p {
+    padding-bottom: 0.2rem;
+}
+
+.console p .fa-clone {
+    float: right;
+    display: none;
+}
+
+.console p:hover .fa-clone {
+    display: block;
+}
+
+.console a {
+    text-decoration: none;
+    color: var(--text-color-code);
+}
+
+.comment span {
+    font-style: italic;
+}
+
+.bash .console {
+    background: var(--background-color-code);
+}
+
+.bash .console .comment:before {
+    content: "$ ";
+}
+
+.bash .console .comment span:before {
+    content: "# ";
+}
+
+.bash .console .command:before {
+    content: "$ ";
+}
+
+.powershell .console {
     background-color: var(--powershell);
+}
+
+.powershell .console .cmdlet {
+    color: #D6D43A;
+}
+
+.powershell .console .command:before {
+    content: "PS C:> ";
+}
+
+.powershell .console .comment:before {
+    content: "PS C:> ";
+}
+
+.powershell .console .comment-block:before {
+    content: "PS C:> ";
+}
+
+.powershell .console .comment span:before {
+    content: "# ";
 }
 
 .powershell .code-snippet {
     background-color: var(--powershell);
 }
 
-section .code-block:last-child {
-    margin-bottom: 0;
+.output {
+    color: #D6C13A;
+}
+
+.code-snippet {
+    background-color: var(--background-color-code);
+    font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
+    font-size: 17px;
+    padding: 0.1rem 0.3rem;
+    border-radius: 5px;
+    color: var(--text-color-code)
+}
+
+/* default code */
+.code-text {
+    font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
 }
 
 .emph {
     font-weight: 600;
-    /* color: #336EFF; */
     color: #759DFF;
+}
+
+#landing {
+    padding-bottom: 0.5rem;
+}
+
+#landing-msg {
+    margin: 1rem;
 }
 
 /* Small tablets and sideways phones */
