styling fix toc padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ h4 {
 li {
     padding-bottom: 0.2rem;
     list-style-type: circle;
-    list-style-position: outside;
+    list-style-position: inside;
 }
 
 li:last-child {
@@ -163,6 +163,10 @@ li a {
     font-size: 19px;
     color: var(--text-color);
     text-decoration: none;
+}
+
+.topic li {
+    list-style-position: outside;
 }
 
 footer {
@@ -246,7 +250,7 @@ footer {
     background-color: var(--background-color);
     position: relative;
     top: 0;
-    padding: 0 1rem 2rem 1rem;
+    padding-bottom: 2rem;
     z-index: 1;
 }
 
@@ -382,12 +386,9 @@ footer {
 
     .toc {
         width: 30%;
+        padding: 0 1rem;
         word-wrap: break-word;
     }
-
-    /* .fixed {
-        position: fixed;
-    } */
 
     .content {
         width: 70%;
