--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,10 +8,11 @@
     --background-color: #222;
     --background-color-alt: #f0f0f0;
     --background-color-code: #111;
+    --background-color-powershell: #0B4EAA;
 	--text-color: #f0f0f0;
     --text-color-alt: #222;
     --text-color-code: #D6D6D6;
-    --powershell: #0B4EAA;
+    --text-code-highlight: #D6C13A;
 }
 
 * {
@@ -21,40 +22,40 @@
 }
 
 body {
-	font-family: 'Roboto Condensed', sans-serif;
-    font-size: 18px;
-    line-height: 1.4em;
-    color: var(--text-color);
-    background: var(--background-color);
     position: relative;
     min-height: 100vh;
     max-width: 100vw;
     overflow-x: hidden;
     padding-bottom: 1rem;
+	font-family: 'Roboto Condensed', sans-serif;
+    line-height: 1.4em;
+    font-size: 18px;
+    color: var(--text-color);
+    background: var(--background-color);
 }
 
 main {
-    width: 100vw;
+    width: 100%;
     margin-bottom: 5rem;
 }
 
 nav {
+    position: relative;
+    height: 10vh;
     display: flex;
     flex-direction: row;
     align-items: center;
     overflow: hidden;
     background-color: var(--background-color);
-    position: relative;
-    height: 10vh;
 }
 
 /* Style navigation menu links */
 nav a {
-    color: var(--text-color);
+    display: block;
     padding: 18px 16px;
     text-decoration: none;
     font-size: 20px;
-    display: block;
+    color: var(--text-color);
 }
 
 /* Change color scheme on mouse-over */
@@ -76,63 +77,65 @@ nav #desktop-menu {
 }
 
 #mobile-menu {
-    display: flex;
-    flex-direction: column;
     position: absolute;
     top: 10vh;
     right: 0;
-    background: var(--background-color);
     width: 200px;
+    display: flex;
+    flex-direction: column;
+    background: var(--background-color);
     visibility: hidden;
 }
 
 #mobile-menu a {
-    display: block;
     position: relative;
-    color: var(--text-color);
     padding: 0.5rem 1rem;
+    display: block;
     text-decoration: none;
     font-size: 20px;
+    color: var(--text-color);
 }
 
+/* Prevent images from extending off-screen */
 img {
     display: block;
     max-width: 100vw;
 }
 
 section {
-    overflow: hidden;
     position: relative;
     padding-bottom: 2rem;
+    overflow: hidden;
 }
 
 article {
-    display: flex;
-    flex-direction: column;
     margin: auto;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
 }
 
+/* Confine article images to division boundaries */
 article img {
     max-width: 100%;
 }
 
 article h2 {
-    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 article p {
-    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 article p:last-child {
-    padding-bottom: 0;
+    margin-bottom: 0;
 }
 
 h1 {
     font-family: Lato, 'Roboto Condensed', sans-serif;
     line-height: 1.4em;
-    padding-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
 h2 {
@@ -141,8 +144,9 @@ h2 {
 
 h3 {
     font-family: Lato, 'Roboto Condensed', sans-serif;
-    padding-bottom: 0.5rem;
     margin-bottom: 1rem;
+    padding-bottom: 0.5rem;
+    
 }
 
 h4 {
@@ -150,9 +154,9 @@ h4 {
 }
 
 li {
-    padding-bottom: 0.2rem;
+    padding-bottom: 0.3rem;
     list-style-type: circle;
-    list-style-position: inside;
+    list-style-position: outside;
 }
 
 li:last-child {
@@ -165,18 +169,14 @@ li a {
     text-decoration: none;
 }
 
-.topic li {
-    list-style-position: outside;
-}
-
 footer {
-    background: var(--background-color);
-    color: var(--text-color);
-    text-align: center;
     position: absolute;
     width: 100%;
     bottom: 0;
     padding: 1rem;
+    text-align: center;
+    background: var(--background-color);
+    color: var(--text-color);
 }
 
 .center-page {
@@ -203,21 +203,19 @@ footer {
 }
 
 .featured h2 {
-    text-align: center;
     margin: 1rem auto;
+    text-align: center;
 }
 
 .thumbnail-container {
+    margin-bottom: 2rem;
     display: block;
     text-align: center;
-    /* align-self: start; */
     justify-self: center;
-    /* align-content: center; */
-    padding-bottom: 2rem;
 }
 
 .thumbnail-container:last-child {
-    padding-bottom: 0;
+    margin-bottom: 0;
 }
 
 .thumbnail-container h2 a {
@@ -243,15 +241,17 @@ footer {
     grid-template-columns: max-content auto;
     column-gap: 1rem;
     row-gap: 0.2rem;
-    padding-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
 .toc {
-    background-color: var(--background-color);
     position: relative;
     top: 0;
-    padding-bottom: 2rem;
-    z-index: 1;
+    margin-bottom: 2rem;
+}
+
+.toc ul {
+    padding-left: 1rem;
 }
 
 .topic h3 {
@@ -264,8 +264,8 @@ footer {
 }
 
 .topic ul {
-    padding-bottom: 1rem;
-    padding-left: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
 }
 
 .topic:last-child {
@@ -285,18 +285,13 @@ footer {
     padding-bottom: 0.2rem;
 }
 
+.console p:last-child {
+    padding-bottom: 0;
+}
+
 .console p .fa-clone {
     float: right;
     display: none;
-}
-
-.console p:hover .fa-clone {
-    display: block;
-}
-
-.console a {
-    text-decoration: none;
-    color: var(--text-color-code);
 }
 
 .comment span {
@@ -320,11 +315,11 @@ footer {
 }
 
 .powershell .console {
-    background-color: var(--powershell);
+    background-color: var(--background-color-powershell);
 }
 
 .powershell .console .cmdlet {
-    color: #D6D43A;
+    color: var(--text-code-highlight);
 }
 
 .powershell .console .command:before {
@@ -344,18 +339,18 @@ footer {
 }
 
 .powershell .snippet {
-    background-color: var(--powershell);
+    background-color: var(--background-color-powershell);
 }
 
 .output {
-    color: #D6C13A;
+    color: var(--text-code-highlight);
 }
 
 .snippet {
+    padding: 0.1rem 0.3rem;
     background-color: var(--background-color-code);
     font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
     font-size: 17px;
-    padding: 0.1rem 0.3rem;
     border-radius: 5px;
     color: var(--text-color-code)
 }
@@ -397,7 +392,6 @@ footer {
     
     .gallery {
         grid-template-columns: repeat(2, 1fr);
-        /* grid-gap: 1em; */
     }
 
     .thumbnail-container {
@@ -417,7 +411,6 @@ footer {
     }
 
     article {
-        /* width: 60%; */
         padding-top: 2rem;
         width: 90%;
     }
@@ -450,7 +443,6 @@ footer {
 
     .gallery {
         grid-template-columns: repeat(3, 1fr);
-        /* grid-gap: 1em; */
     }
 
     .featured .thumbnail-container:last-child {
@@ -459,6 +451,15 @@ footer {
 
     .extra-padding {
         padding: 2rem 0;
+    }
+    
+    .console p:hover .fa-clone {
+        display: block;
+    }
+    
+    .console a {
+        text-decoration: none;
+        color: var(--text-color-code);
     }
 
     #landing {
