--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,16 @@
-/* fonts */
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 @import url('https://fonts.googleapis.com/css2?family=Lato');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code');
 
-/* variables */
 :root {
-    --background-color: #222;
-    --background-color-alt: #f0f0f0;
-    --background-color-code: #111;
-    --background-color-powershell: #0B4EAA;
-	--text-color: #f0f0f0;
-    --text-color-alt: #222;
-    --text-color-code: #D6D6D6;
-    --text-code-highlight: #D6C13A;
+    --background: #222;
+    --background-alt: #CFCFCF;
+    --background-code: #111;
+    --background-powershell: #0B4EAA;
+	--text: #CFCFCF;
+    --text-alt: #222;
+    --text-code: #D6D6D6;
+    --text-highlight: #D6C13A;
 }
 
 * {
@@ -26,17 +24,16 @@ body {
     min-height: 100vh;
     max-width: 100vw;
     overflow-x: hidden;
-    padding-bottom: 1rem;
 	font-family: 'Roboto Condensed', sans-serif;
     line-height: 1.4em;
     font-size: 18px;
-    color: var(--text-color);
-    background: var(--background-color);
+    color: var(--text);
+    background: var(--background);
+    padding-bottom: 1rem;
 }
 
 main {
-    width: 100%;
-    margin-bottom: 5rem;
+    margin: 1rem 1rem 5rem 1rem;
 }
 
 nav {
@@ -45,26 +42,22 @@ nav {
     display: flex;
     flex-direction: row;
     align-items: center;
-    overflow: hidden;
-    background-color: var(--background-color);
+    background: var(--background);
 }
 
-/* Style navigation menu links */
 nav a {
     display: block;
-    padding: 18px 16px;
     text-decoration: none;
     font-size: 20px;
-    color: var(--text-color);
+    color: var(--text);
+    padding: 18px 16px;
 }
 
-/* Change color scheme on mouse-over */
 nav a:hover {
-    background-color: var(--background-color-alt);
-    color: var(--text-color-alt);
+    color: var(--text-alt);
+    background: var(--background-alt);
 }
 
-/* Style the hamburger menu */
 nav a.hamburger {
     display: block;
     position: absolute;
@@ -83,8 +76,8 @@ nav #desktop-menu {
     width: 200px;
     display: flex;
     flex-direction: column;
-    background: var(--background-color);
     visibility: hidden;
+    background: var(--background);
 }
 
 #mobile-menu a {
@@ -93,79 +86,54 @@ nav #desktop-menu {
     display: block;
     text-decoration: none;
     font-size: 20px;
-    color: var(--text-color);
+    color: var(--text);
 }
 
-/* Prevent images from extending off-screen */
 img {
     display: block;
-    max-width: 100vw;
+    max-width: 100%;
+}
+
+header {
+    display: grid;
+    grid-gap: 1rem;
+}
+
+header div {
+    margin: 0 1rem;
+}
+
+header h1 {
+    margin-bottom: 0.5rem;
 }
 
 section {
     position: relative;
-    padding-bottom: 2rem;
-    overflow: hidden;
+    margin: 1rem auto;
 }
 
 article {
     margin: auto;
-    padding: 1rem;
     display: flex;
     flex-direction: column;
 }
 
-/* Confine article images to division boundaries */
-article img {
-    max-width: 100%;
-}
-
-article h2 {
-    margin-bottom: 0.5rem;
-}
-
-article p {
-    margin-bottom: 0.5rem;
-}
-
-article p:last-child {
-    margin-bottom: 0;
+h1, h2, h3 {
+    font-family: Lato, 'Roboto Condensed', sans-serif;
 }
 
 h1 {
-    font-family: Lato, 'Roboto Condensed', sans-serif;
-    line-height: 1.4em;
-    margin-bottom: 1rem;
-}
-
-h2 {
-    font-family: Lato, 'Roboto Condensed', sans-serif;
-}
-
-h3 {
-    font-family: Lato, 'Roboto Condensed', sans-serif;
-    margin-bottom: 1rem;
-    padding-bottom: 0.5rem;
-    
-}
-
-h4 {
-    padding-bottom: 1rem;
+    line-height: 1.2em;
 }
 
 li {
-    padding-bottom: 0.3rem;
     list-style-type: circle;
     list-style-position: outside;
 }
 
-li:last-child {
-    padding-bottom: 0;
-}
-
 li a {
     font-size: 19px;
-    color: var(--text-color);
+    color: var(--text);
     text-decoration: none;
 }
 
@@ -175,8 +143,8 @@ footer {
     bottom: 0;
     padding: 1rem;
     text-align: center;
-    background: var(--background-color);
-    color: var(--text-color);
+    background: var(--background);
+    color: var(--text);
 }
 
 .center-page {
@@ -189,8 +157,8 @@ footer {
 }
 
 .center {
+    width: 100%;
     margin: 0 auto;
-    width: 90%;
 }
 
 .grid {
@@ -198,43 +166,33 @@ footer {
     grid-auto-rows: auto;
 }
 
-.gallery {
-    margin: 1rem;
-}
-
-.featured h2 {
-    margin: 1rem auto;
-    text-align: center;
-}
-
-.thumbnail-container {
-    margin-bottom: 2rem;
+.tile {
     display: block;
     text-align: center;
     justify-self: center;
+    margin: 1.2rem 0;
 }
 
-.thumbnail-container:last-child {
+.tile:last-child {
     margin-bottom: 0;
 }
 
-.thumbnail-container h2 a {
-    color: var(--text-color);
+.tile h2 a {
     text-decoration: none;
+    color: var(--text);
 }
 
-.thumbnail-container img {
-    margin: 1rem auto;
-    max-width: 96%;
+.tile img {
     text-align: center;
     border-radius: 10px;
+    margin: 1rem auto;
 }
 
-.thumbnail-container-text {
+.tile p {
     display: block;
     margin: auto;
     padding: 0 1rem;
-    text-align: left;
+    text-align: center;
 }
 
 .definitions {
@@ -272,7 +230,7 @@ footer {
 
 .topic h3 a {
     text-decoration: none;
-    color: var(--text-color);
+    color: var(--text);
 }
 
 .topic ul {
@@ -285,7 +243,7 @@ footer {
     padding: 1rem;
     font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
     font-size: 16px;
-    color: var(--text-color-code);
+    color: var(--text-code);
     border-radius: 10px;
 }
 
@@ -311,7 +269,7 @@ footer {
 }
 
 .bash .console {
-    background: var(--background-color-code);
+    background: var(--background-code);
 }
 
 .bash .console .comment:before {
@@ -327,11 +285,11 @@ footer {
 }
 
 .powershell .console {
-    background-color: var(--background-color-powershell);
+    background-color: var(--background-powershell);
 }
 
 .powershell .console .cmdlet {
-    color: var(--text-code-highlight);
+    color: var(--text-highlight);
 }
 
 .powershell .console .command:before {
@@ -351,20 +309,20 @@ footer {
 }
 
 .powershell .snippet {
-    background-color: var(--background-color-powershell);
+    background-color: var(--background-powershell);
 }
 
 .output {
-    color: var(--text-code-highlight);
+    color: var(--text-highlight);
 }
 
 .snippet {
     padding: 0.1rem 0.3rem;
-    background-color: var(--background-color-code);
+    background-color: var(--background-code);
     font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
     font-size: 17px;
     border-radius: 5px;
-    color: var(--text-color-code)
+    color: var(--text-code)
 }
 
 /* default code */
@@ -406,11 +364,11 @@ footer {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .thumbnail-container {
+    .tile {
         max-width: 45vw;
     }
 
-    .featured .thumbnail-container:last-child {
+    .featured .tile:last-child {
         grid-column: 1 / span 2;
     }
 }
@@ -457,7 +415,7 @@ footer {
         grid-template-columns: repeat(3, 1fr);
     }
 
-    .featured .thumbnail-container:last-child {
+    .featured .tile:last-child {
         grid-column: 3;
     }
 
@@ -471,7 +429,7 @@ footer {
     
     .console a {
         text-decoration: none;
-        color: var(--text-color-code);
+        color: var(--text-code);
     }
 
     #landing {
