--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,15 +108,29 @@ header h1 {
     margin-bottom: 0.5rem;
 }
 
+article {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+}
+
 section {
     position: relative;
     margin: 1rem auto;
 }
 
-article {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
+section h3 {
+    border-bottom: solid;
+}
+
+section h3 a {
+    text-decoration: none;
+    color: var(--text);
+}
+
+section ul {
+    margin-bottom: 1rem;
+    margin-left: 1rem;
 }
 
 h1, h2, h3 {
@@ -157,11 +171,6 @@ footer {
     color: red;
 }
 
-.center {
-    width: 100%;
-    margin: 0 auto;
-}
-
 .grid {
     display: grid;
     grid-auto-rows: auto;
@@ -200,56 +209,23 @@ footer {
     grid-template-columns: max-content auto;
     column-gap: 1rem;
     row-gap: 0.2rem;
-    margin-bottom: 1rem;
-}
-
-.topic .definitions:last-child {
-    margin-bottom: 0;
 }
 
 .toc {
     position: relative;
-    top: 0;
-    margin-bottom: 2rem;
+    margin: 1.2rem 0;
 }
 
 .toc ul {
     padding-left: 1rem;
 }
 
-.topic {
-    margin-bottom: 1rem;
-}
-
-.topic:last-child {
-    margin-bottom: 0;
-}
-
-.topic h3 {
-    border-bottom: solid;
-}
-
-.topic h3 a {
-    text-decoration: none;
-    color: var(--text);
-}
-
-.topic ul {
-    margin-bottom: 1rem;
-    margin-left: 1rem;
-}
-
 .console {
-    margin-bottom: 1.5rem;
-    padding: 1rem;
     font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
     font-size: 16px;
     color: var(--text-code);
     border-radius: 10px;
-}
-
-.console:last-child {
-    margin-bottom: 0;
+    padding: 1rem;
 }
 
 .console p {
@@ -294,15 +270,15 @@ footer {
 }
 
 .powershell .console .command:before {
-    content: "PS C:> ";
+    content: "C:> ";
 }
 
 .powershell .console .comment:before {
-    content: "PS C:> ";
+    content: "C:> ";
 }
 
 .powershell .console .comment-block:before {
-    content: "PS C:> ";
+    content: "C:> ";
 }
 
 .powershell .console .comment span:before {
@@ -326,7 +302,6 @@ footer {
     color: var(--text-code)
 }
 
-/* default code */
 .code-text {
     font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
 }
@@ -336,27 +311,14 @@ footer {
     color: #759DFF;
 }
 
-#landing {
-    padding-bottom: 0.5rem;
-}
-
-#landing-msg {
-    margin: 1rem;
-}
-
 /* Small tablets and sideways phones */
 @media screen and (min-width: 600px) {
     article {
         flex-direction: row;
-        padding-top: 2rem;
     }
 
     .center {
         text-align: center;
-    }
-
-    .extra-padding {
-        padding: 2rem 0;
     }
 
     .toc {
@@ -368,10 +330,6 @@ footer {
     .content {
         width: 70%;
         padding: 0 1rem;
-    }
-    
-    .gallery {
-        grid-template-columns: repeat(2, 1fr);
     }
 
     .tile {
@@ -411,18 +369,6 @@ footer {
         width: 90%;
         padding: 0 2rem;
     }
-
-    .gallery {
-        grid-template-columns: repeat(4, 1fr);
-    }
-
-    .featured .tile:last-child {
-        grid-column: 3;
-    }
-
-    .extra-padding {
-        padding: 2rem 0;
-    }
     
     .console p:hover .fa-clone {
         display: block;
@@ -431,22 +377,6 @@ footer {
     .console a {
         text-decoration: none;
         color: var(--text-code);
-    }
-
-    #landing {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 1em;
-        max-width: 100vw;
-    }
-
-    #landing img {
-        max-width: 60vw;
-    }
-
-    #landing-msg {
-        margin: auto 1rem;
-        padding-right: 1.5rem;
     }
 
     nav a.hamburger {
