--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,6 +98,7 @@ img {
 header {
     display: grid;
     grid-gap: 1rem;
+    margin-bottom: 3rem;
 }
 
 header div {
@@ -121,6 +122,7 @@ section {
 
 section h3 {
     border-bottom: solid;
+    padding-bottom: 0.5rem;
 }
 
 section h3 a {
@@ -133,12 +135,49 @@ section ul {
     margin-left: 1rem;
 }
 
+.content section {
+    margin-bottom: 2rem;
+}
+
+.content section:last-child {
+    margin-bottom: auto;
+}
+
+.content section h3 {
+    margin-bottom: 1rem;
+}
+
+.content section p {
+    margin-bottom: 1rem;
+}
+
+.content section .definitions p {
+    margin-bottom: auto;
+}
+
+.content section .console p {
+    margin-bottom: auto;
+}
+
 h1, h2, h3 {
     font-family: Lato, 'Roboto Condensed', sans-serif;
 }
 
 h1 {
     line-height: 1.2em;
+    margin-bottom: 1rem;
+}
+
+h4 {
+    margin-bottom: 1.2rem;
+}
+
+ul {
+    margin-bottom: 1rem;
+}
+
+ul:last-child {
+    margin-bottom: auto;
 }
 
 li {
@@ -180,7 +219,7 @@ footer {
     display: block;
     text-align: center;
     justify-self: center;
-    margin: 1.2rem 0;
+    margin: 1rem 0;
 }
 
 .tile:last-child {
@@ -209,11 +248,20 @@ footer {
     grid-template-columns: max-content auto;
     column-gap: 1rem;
     row-gap: 0.2rem;
+    margin-bottom: 1rem;
+}
+
+.definitions:last-child {
+    margin-bottom: auto;
 }
 
 .toc {
     position: relative;
-    margin: 1.2rem 0;
+    margin: 1rem 0;
+}
+
+.toc h3 {
+    margin-bottom: 1rem;
 }
 
 .toc ul {
@@ -226,6 +274,7 @@ footer {
     color: var(--text-code);
     border-radius: 10px;
     padding: 1rem;
+    margin-bottom: 1rem;
 }
 
 .console p {
@@ -294,12 +343,12 @@ footer {
 }
 
 .snippet {
-    padding: 0.1rem 0.3rem;
-    background-color: var(--background-code);
     font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
     font-size: 17px;
     border-radius: 5px;
-    color: var(--text-code)
+    color: var(--text-code);
+    background-color: var(--background-code);
+    padding: 0.1rem 0.3rem;
 }
 
 .code-text {
@@ -313,8 +362,26 @@ footer {
 
 /* Small tablets and sideways phones */
 @media screen and (min-width: 600px) {
+    header {
+        grid-template-columns: 3fr 2fr;
+    }
+
+    header div {
+        margin: auto 3rem auto 1rem;
+    }
+
+    header h1 {
+        line-height: 1.4em;
+        margin-bottom: 1rem;
+    }
+
     article {
         flex-direction: row;
+    }
+
+    .gallery {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 1rem;
     }
 
     .center {
@@ -330,10 +397,6 @@ footer {
     .content {
         width: 70%;
         padding: 0 1rem;
-    }
-
-    .tile {
-        max-width: 45vw;
     }
 }
 
@@ -353,13 +416,21 @@ footer {
         color: white;
         padding: 14px 16px;
         text-decoration: none;
-      }
+    }
+
+    nav a.hamburger {
+        display: none;
+    }
 
     nav #desktop-menu {
         position: absolute;
         right: 1rem;
         display: block;
     }
+
+    .gallery {
+        grid-template-columns: repeat(3, 1fr);
+    }  
 
     .toc {
         padding: 0 2rem;
@@ -378,13 +449,11 @@ footer {
         text-decoration: none;
         color: var(--text-code);
     }
-
-    nav a.hamburger {
-        display: none;
-    }
 }
 
 /* Desktops and large monitors */
 @media screen and (min-width: 1200px) {
-
+    .gallery {
+        grid-template-columns: repeat(4, 1fr);
+    }   
 }
