--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,7 @@
     --text-code: #D6D6D6;
     --text-emph: #759DFF;
     --text-highlight: #D6C13A;
+    --links: #FF5733;
 }
 
 * {
@@ -121,9 +122,23 @@ section {
     margin: 1rem auto;
 }
 
-section h3 {
+article h2 {
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+article section h2 {
+    border-bottom: solid;
+}
+
+article section h3 {
     border-bottom: solid;
     padding-bottom: 0.5rem;
+}
+
+article section a {
+    color: var(--links);
 }
 
 section h3 a {
@@ -325,15 +340,15 @@ footer {
 }
 
 .powershell .console .command:before {
-    content: "C:> ";
+    content: "C:\\> ";
 }
 
 .powershell .console .comment:before {
-    content: "C:> ";
+    content: "C:\\> ";
 }
 
 .powershell .console .comment-block:before {
-    content: "C:> ";
+    content: "C:\\> ";
 }
 
 .powershell .console .comment span:before {
