--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
     --text-code: #D6D6D6;
     --text-emph: #759DFF;
     --text-highlight: #D6C13A;
-    --links: #FF5733;
+    --links: #9333FF;
 }
 
 * {
