correct page titles for about and gallery

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,9 +10,9 @@
   --text: #f0f0f0;
   --text-alt: #222;
   --text-code: #d6d6d6;
-  --text-emph: #759dff;
+  --text-emph: #9333ff;
   --text-highlight: #d6c13a;
-  --links: #9333ff;
+  --links: #759dff;
 }
 
 * {
