--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,7 +40,7 @@ main {
 
 nav {
   position: relative;
-  height: 10vh;
+  height: 60px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -73,7 +73,7 @@ nav #desktop-menu {
 
 #mobile-menu {
   position: absolute;
-  top: 10vh;
+  top: 60px;
   right: 0;
   width: 200px;
   display: flex;
