--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,6 +143,11 @@ article section h3 {
   margin-bottom: 0.5rem;
 }
 
+article section h4 {
+  padding-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+
 article section a {
   color: var(--links);
 }
@@ -172,10 +177,6 @@ h3 {
 h1 {
   line-height: 1.2em;
   margin-bottom: 1rem;
-}
-
-h4 {
-  margin-bottom: 1.2rem;
 }
 
 ul {
